# DynamicModbusMaster

./: .gitignore  DoxygenLayout.xml  LICENSE.txt  README.md  TestDevice-1-1.mbs  TestDevice-1-2.mbs  TestDevice-1-3.mbs  TestDevice-1-4.mbs  dmm_doxy  qodana.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: documentation.yml  static_analysis.yml  upload.yml
docRaw/: ClassDiagram.md  DynamicModbusLib.drawio  Examples.md  FunctionalUnits.md  Mainpage.md  Requirements.md
docRaw/Planning/: ClassDiagram.md  FunctionalUnits.md  MVP.md
docRaw/Usage/: GettingStarted.md  SlaveDevices.md
dynamic_modbus_master/: CMakeLists.txt  DynamicModbusMaster.cpp  Kconfig  ModbusErrorHelper.cpp  SlaveDevice.cpp  dynamic_modbus_master.cpp  idf_component.yml
dynamic_modbus_master/examples/SingleSlaveDevice/: CMakeLists.txt  SingleSlaveDevice.md  sdkconfig
dynamic_modbus_master/examples/SingleSlaveDevice/main/: CMakeLists.txt  Kconfig.projbuild  SingleSlaveDevice.cpp  SingleSlaveExampleDevice.cpp  SingleSlaveExampleDevice.h  idf_component.yml
dynamic_modbus_master/examples/SingleSlaveDeviceAggregate/: CMakeLists.txt  SingleSlaveDeviceAggregation.md
dynamic_modbus_master/examples/SingleSlaveDeviceAggregate/main/: AggregateDevice.cpp  AggregateDevice.h  CMakeLists.txt  Kconfig.projbuild  SingleSlaveDeviceAggregate.cpp  idf_component.yml
dynamic_modbus_master/include/: DynamicModbusMaster.h  ModbusConfiguration.h  ModbusData.hpp  ModbusError.h  ModbusErrorHelper.h  SlaveDevice.h  SlaveDeviceIfc.h  dmm_common.h
